champs/unit_tests/invalid/char_between_command.s
 .comment	.			"  'c  e"   			   	    	
				.name	" test d'un name   " 			
#COMMENTAIRE
#COMMENTAIRE

ld %4 , r1
fork: fork %:life

load: or %:fork,                        r2,		r3

life: and %:load,r2,r1

ldi 3, %4, r1
